adjust hero section height on mobile, fix find schedule options

--- a/src/components/FindSchedule.css
+++ b/src/components/FindSchedule.css
@@ -20,7 +20,7 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
-    font-size: .75rem;
+    font-size: 1rem;
     text-align: justify;
 }
 
@@ -43,9 +43,10 @@
 
 .sched-finder {
     background-color: #ffffff;
+    color: #000;
     display: flex;
     flex-direction: column;
-    height: 180px;
+    height: 230px;
     align-items: center;
     justify-content: space-around;
     border: solid 3px var(--blood-red);
